--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>To Ruoholahdenkatu</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:800' rel='stylesheet' type='text/css'>
-    <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:800' rel='stylesheet' type='text/css'>
+    <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
   </head>
   <body>
     <div class="js-app"></div>
